fixed alignment cardholder

--- a/src/style.css
+++ b/src/style.css
@@ -2198,10 +2198,14 @@ legend {
   .cardHolder {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 4rem;
+  }
+
+  .cardHolderBtns {
     padding: 0 3rem;
     margin-left: auto;
     margin-right: auto;
   }
+
   /* LOGIN */
 
   .loginHolder .colorBg {
